--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,10 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.26"
